Fix creative tab name, finish removing decayfeather

--- a/src/main/resources/assets/botanicalfactory/lang/en_US.lang
+++ b/src/main/resources/assets/botanicalfactory/lang/en_US.lang
@@ -8,12 +8,10 @@ tile.openChest.name=Open Chest
 botanicalfactory.lexicon.flower.chopperhock.1=The &1Chopperhock&0 is a flower that, given a small amount of &4Mana&0, will break nearby &4Wood&0 blocks, dropping them as items.  Applying a redstone signal will prevent it from working.
 botanicalfactory.lexicon.flower.chopperhock.crafting=Not a hopper
 botanicalfactory.lexicon.flower.chopperhock.tagline=Chops wood
-botanicalfactory.lexicon.flower.decayfeather.1=A big annoyance with chopping trees is waiting for the leaves to decay.  Thanks to the &1Decayfeather&0, you can reduce your time waiting for leaves by [insert percentage here] percent!  Note, however, that it uses mana even when the leaves are still attached to the tree without any effect.  You can disable it by applying a redstone signal.
-botanicalfactory.lexicon.flower.decayfeather.crafting=Please, no more rainbows
-botanicalfactory.lexicon.flower.decayfeather.tagline=Makes leaves decay faster
 botanicalfactory.lexicon.flower.floatus.1=There are many ways to go upwards.  Stairs, ladders, vines, water, and more.  The &1Floatus&0 allows you to go up in style by levitating you and other entities by about 16 blocks.
 botanicalfactory.lexicon.flower.floatus.crafting=A little purple flower makes the entities go up
 botanicalfactory.lexicon.flower.floatus.tagline=Levitates entities
 botanicalfactory.lexicon.tile.openChest.1=The &1Open Chest&0 is an upgraded version of the &4Dropper&0 that, instead of randomly dropping one item, drops an item from each stack in its (larger) inventory.
 botanicalfactory.lexicon.tile.openChest.crafting=Gravity not included
 botanicalfactory.lexicon.tile.openChest.tagline=Drops items on redstone signal
+itemGroup.botanicalfactory=Botanical Factory
